chore(sonar): simplify Stream to List conversion & optimise String replace